a working example of instiment the start 3 times and print 3 seprate loops